@@ -66,6 +66,7 @@ class paloSantoConfiguration {
                 'dialer.overcommit' => '0',
                 'dialer.qos' => '0.97',
                 'dialer.predictivo' => '1',
+                'dialer.timeout_originate' => '0',
             );
             foreach ($listaConf as $tupla) $t[$tupla[0]] = $tupla[1];
             $listaConf = $t;
