@@ -12,7 +12,7 @@
 </table>
 <table width="100%">
     <tr><td width="100%">
-        <table class="tabForm" style="font-size: 16px;" width="100%" >
+        <table class="tabForm">
 			<tr class="letra12">
 				<td align="center" colspan="2"><b>Asterisk Connection</b></td>
 				<td align="center" colspan="2"><b>Dialer Parameters</b></td>
@@ -31,10 +31,14 @@
 			</tr>
 			<tr class="letra12">
 				<td align="right">{$asterisk_astpass_2.LABEL}:</td><td align="left">{$asterisk_astpass_2.INPUT}</td>
-				<td align="right">{$dialer_debug.LABEL}:</td><td align="left">{$dialer_debug.INPUT}</td>
+                <td align="right">{$dialer_timeout_originate.LABEL}:</td><td align="left">{$dialer_timeout_originate.INPUT}</td>
 			</tr>
             <tr class="letra12">
                 <td align="right">{$asterisk_duracion_sesion.LABEL}:</td><td align="left">{$asterisk_duracion_sesion.INPUT}</td>
+                <td align="right">{$dialer_debug.LABEL}:</td><td align="left">{$dialer_debug.INPUT}</td>
+            </tr>
+            <tr class="letra12">
+                <td colspan="2">&nbsp;</td>
                 <td align="right">{$dialer_allevents.LABEL}:</td><td align="left">{$dialer_allevents.INPUT}</td>                
             </tr>
             <tr class="letra12">
