@@ -54,5 +54,6 @@ $arrLangModule=array(
 'AMI Session Duration' => 'Duración de sesión de AMI (0 para persistente)',
 'Service percent' => 'Porcentaje servicio',
 'Enable predictive dialer behavior' => 'Activar comportamiento predictivo del marcado',
+'Per-call dial timeout' => 'Espera máxima por llamada marcada',
 );
 ?>
