@@ -1,3 +1,5 @@
+* Dialer: add new configuration parameter to specify the maximum number of
+  seconds to wait for the Originate AMI request before timeout.
 * Installer: fix invalid SQL syntax on foreign key creation for external URL
 * Reports Break: some cleanup on language loading
 * External URL: (trivial) remove useless assignment
